--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <div class="navbar navbar-default navbar-fixed-top">
     <div class="container">
         <div class="navbar-header">
-            <a class="navbar-brand" href="https://github.com/blueimp/jQuery-File-Upload">File Uploader</a>
+            <a class="navbar-brand" href="/">File Uploader</a>
         </div>
     </div>
 </div>
@@ -21,7 +21,7 @@
     <h1>File Uploader</h1>
     <br>
     <blockquote>
-        <p>This demo showcases how to Lambda to upload images.</p>
+        <p>This demo showcases how to use Lambda to upload images.</p>
     </blockquote>
     <br>
     <span class="btn btn-info fileinput-button">
@@ -67,9 +67,7 @@ $(function () {
                 if (!result.errorMessage) {
                     data.url = result.oneTimeUploadUrl;
                     data.contentType = data.files[0].type;
-                    
                     data.resultUrl = result.resultUrl;
-                    
                     data.submit();
                 } else {
                     alert(result.errorMessage);
